--- a/tools/ToolCore/ToolCore.csproj
+++ b/tools/ToolCore/ToolCore.csproj
@@ -10,11 +10,11 @@
     </PropertyGroup>
 
     <PropertyGroup Condition=" '$(Configuration)' == 'Debug' ">
-          <OutputPath>../../build/debug/output/</OutputPath>
+          <OutputPath>../../build/debug/out/</OutputPath>
         </PropertyGroup>
 
         <PropertyGroup Condition=" '$(Configuration)' == 'Release' ">
-          <OutputPath>../../build/release/output/</OutputPath>
+          <OutputPath>../../build/release/out/</OutputPath>
         </PropertyGroup>
 
 </Project>
