--- a/conandata.yml
+++ b/conandata.yml
@@ -2,4 +2,5 @@
 # To keep your changes, remove these comment lines, but the plugin won't be able to modify your requirements
 
 requirements:
+  - "spdlog/1.12.0"
   - "gtest/1.14.0"
