--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,6 +1,9 @@
+find_package(spdlog)
+
 add_atlas_library(
         TARGET core
         PRIVATE_DEFINITIONS CORE_EXPORT
         PUBLIC_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include
         PRIVATE_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/src
+        PUBLIC_LINK_LIB spdlog::spdlog
 )
