--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -6,5 +6,6 @@ add_atlas_library(
         PRIVATE_DEFINITIONS CORE_EXPORT
         PUBLIC_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include
         PRIVATE_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/src
-        PUBLIC_LINK_LIB spdlog::spdlog ICU::uc
+        PUBLIC_LINK_LIB spdlog::spdlog
+        PRIVATE_LINK_LIB ICU::uc
 )
