feat: utf conversion with boost locale

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,11 +1,10 @@
 find_package(spdlog)
-find_package(ICU)
+find_package(Boost)
 
 add_atlas_library(
         TARGET core
         PRIVATE_DEFINITIONS CORE_EXPORT
         PUBLIC_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include
         PRIVATE_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/src
-        PUBLIC_LINK_LIB spdlog::spdlog
-        PRIVATE_LINK_LIB ICU::uc
+        PUBLIC_LINK_LIB spdlog::spdlog Boost::locale
 )
