feat: enable compile optimize

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,9 @@ if (MSVC)
     add_compile_options(/utf-8)
 endif ()
 
+set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /GL")
+set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /GL")
+
 if(${CMAKE_BUILD_TYPE} MATCHES "Debug")
     add_compile_definitions(DEBUG)
 elseif(${CMAKE_BUILD_TYPE} MATCHES "RelWithDebInfo")
@@ -90,5 +93,6 @@ add_subdirectory(src)
 if (with_test)
     add_subdirectory(test)
 endif ()
+add_subdirectory(benchmark)
 
 message(${CMAKE_BINARY_DIR})
