feat: add application module

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,5 @@
 add_subdirectory(core)
 add_subdirectory(engine)
+add_subdirectory(application)
 add_subdirectory(launcher)
 add_subdirectory(renderer)
