--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,12 +1,12 @@
 find_package(spdlog)
 find_package(Boost)
+find_package(tomlplusplus)
 
 add_atlas_library(
         TARGET core
-        PRIVATE_DEFINITIONS CORE_EXPORT
         PUBLIC_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include
         PRIVATE_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/src
-        PUBLIC_LINK_LIB spdlog::spdlog Boost::locale
+        PUBLIC_LINK_LIB spdlog::spdlog Boost::locale tomlplusplus::tomlplusplus
 )
 
 if (with_editor)
