feat: add rhi module

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(engine)
 add_subdirectory(application)
 add_subdirectory(launcher)
 add_subdirectory(renderer)
+add_subdirectory(rhi)
