feat: rebase to main

--- a/src/core/CMakeLists.txt
+++ b/src/core/CMakeLists.txt
@@ -1,7 +1,7 @@
-find_package(spdlog)
-find_package(Boost)
-find_package(tomlplusplus)
-find_package(nlohmann_json)
+find_package(spdlog REQUIRED)
+find_package(Boost COMPONENTS locale REQUIRED)
+find_package(tomlplusplus REQUIRED)
+find_package(nlohmann_json REQUIRED)
 
 add_atlas_library(
         TARGET core
