feat: windows opengl context

--- a/src/rhi/CMakeLists.txt
+++ b/src/rhi/CMakeLists.txt
@@ -1,8 +1,8 @@
 add_atlas_library(
         TARGET rhi
-        PUBLIC_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include
+        PUBLIC_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include ${CMAKE_CURRENT_SOURCE_DIR}/include/opengl
         PRIVATE_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/src
-        PUBLIC_LINK_LIB core
+        PUBLIC_LINK_LIB application
 )
 
 find_package(OpenGL COMPONENTS OpenGL)
