--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(application)
 add_subdirectory(launcher)
 add_subdirectory(renderer)
 add_subdirectory(rhi)
+add_subdirectory(editor)
