--- a/examples/gallery/CMakeLists.txt
+++ b/examples/gallery/CMakeLists.txt
@@ -1,5 +1,5 @@
 add_atlas_project(
-        TARGET empty_project
+        TARGET gallery
         PRIVATE_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/src
         PRIVATE_LINK_LIB rhi
 )
