--- a/tools/AtlasBuilder/AtlasBuilder.csproj
+++ b/tools/AtlasBuilder/AtlasBuilder.csproj
@@ -30,4 +30,8 @@
       <ProjectReference Include="..\ToolCore\ToolCore.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    </ItemGroup>
+
 </Project>
